force-app/main/default/objects/Endorsement__c/fields/Override_Policy_Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Override_Policy_Commission_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use this field to override the policy commission rate</description>
    <inlineHelpText>Use this field to override the policy commission rate</inlineHelpText>
    <label>Override Policy Commission Rate</label>
    <type>Checkbox</type>
</CustomField>