force-app/main/default/objects/Endorsement__c/fields/Override_State_Filing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Override_State_Filing_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The State Filing Fee is a formula field on an endt. The values comes from the policy but sometimes the fee on the endt differs from the policy. Use this field to override the $79.</description>
    <label>Override State Filing Fee</label>
    <type>Checkbox</type>
</CustomField>