force-app/main/default/objects/Endorsement__c/fields/Override_VR__c.field-meta.xml
<CustomField>
    <fullName>Override_VR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The field is used to bypass Stage Required validation rule while creating Endorsement Record.</description>
    <label>Override VR</label>
    <type>Checkbox</type>
</CustomField>