force-app/main/default/objects/Endorsement__c/fields/Payable_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Payable_Adjustment__c</fullName>
    <description>Premium Change Amount - MGA Commission - Change Commission

Used for Scale Invoices in QBO</description>
    <formula>Premium_Change_Amount__c -  MGA_Commission__c - Change_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Premium Change Amount - MGA Commission - Change Commission</inlineHelpText>
    <label>Payable Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>