force-app/main/default/objects/Endorsement__c/fields/Payable_to_State__c.field-meta.xml
<CustomField>
    <fullName>Payable_to_State__c</fullName>
    <formula>IF( Surplus_Lines_Policy__c =TRUE, 
( State_Fees_Other__c + State_Stamping_Fee__c + State_Tax__c ), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payable to State</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>