force-app/main/default/objects/Endorsement__c/fields/Payment_Error__c.field-meta.xml
<CustomField>
    <fullName>Payment_Error__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Error</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>