force-app/main/default/objects/Endorsement__c/fields/Payment_Link__c.field-meta.xml
<CustomField>
    <fullName>Payment_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Link</label>
    <type>TextArea</type>
</CustomField>