force-app/main/default/objects/Endorsement__c/fields/Pleaseidentify_other_LPR__c.field-meta.xml
<CustomField>
    <fullName>Pleaseidentify_other_LPR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Please Identify other LPR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>