force-app/main/default/objects/Endorsement__c/fields/Policy_Billing__c.field-meta.xml
<CustomField>
    <fullName>Policy_Billing__c</fullName>
    <formula>TEXT( Policy__r.Billing__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Billing</label>
    <type>Text</type>
</CustomField>