force-app/main/default/objects/Endorsement__c/fields/Policy_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_Effective_Date__c</fullName>
    <formula>Policy__r.Effective_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Effective Date</label>
    <type>Date</type>
</CustomField>