force-app/main/default/objects/Endorsement__c/fields/Policy_Fees_Taxed__c.field-meta.xml
<CustomField>
    <fullName>Policy_Fees_Taxed__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>As of 9/19/24 we should not be using this field.</description>
    <inlineHelpText>Do not use this</inlineHelpText>
    <label>Policy Fees (Taxed)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>