force-app/main/default/objects/Endorsement__c/fields/Policy_Name__c.field-meta.xml
<CustomField>
    <fullName>Policy_Name__c</fullName>
    <formula>Policy__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Name</label>
    <type>Text</type>
</CustomField>