force-app/main/default/objects/Endorsement__c/fields/Policy_Record_Link__c.field-meta.xml
<CustomField>
    <fullName>Policy_Record_Link__c</fullName>
    <formula>IF(LEFT($Organization.Id, 5) = &apos;00D37&apos;,
&quot;https://foundershield.my.salesforce.com/&quot; + Policy__r.Id,
&quot;https://foundershield--fsdataqa.sandbox.my.salesforce.com/&quot; + Policy__r.Id
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Record Link</label>
    <type>Text</type>
</CustomField>