force-app/main/default/objects/Endorsement__c/fields/Policy_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Policy_Record_Type__c</fullName>
    <formula>Policy__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Record Type</label>
    <type>Text</type>
</CustomField>