force-app/main/default/objects/Endorsement__c/fields/Premium_Ages_18_20__c.field-meta.xml
<CustomField>
    <fullName>Premium_Ages_18_20__c</fullName>
    <formula>Number_of_Deliveries_Ages_18_20__c * Rate_Ages_18_20__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Premium (Ages 18-20)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>