force-app/main/default/objects/Endorsement__c/fields/Premium_Ages_21_25__c.field-meta.xml
<CustomField>
    <fullName>Premium_Ages_21_25__c</fullName>
    <formula>Number_of_Deliveries_Ages_21_25__c * Rate_Ages_21_25__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Premium (Ages 21-25)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>