force-app/main/default/objects/Endorsement__c/fields/Premium_and_Policy_Fees__c.field-meta.xml
<CustomField>
    <fullName>Premium_and_Policy_Fees__c</fullName>
    <formula>Premium_Change_Amount__c + Underwriting_Fees__c + Wholesaler_Fees__c  + FS_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Premium and Policy Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>