force-app/main/default/objects/Endorsement__c/fields/Premium_Change_Amount__c.field-meta.xml
<CustomField>
    <fullName>Premium_Change_Amount__c</fullName>
    <label>Premium Change Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>