force-app/main/default/objects/Endorsement__c/fields/Premium_Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Premium_Change_Type__c</fullName>
    <inlineHelpText>Indicate whether the premium change is billed flat (annual) or pro-rata from the effective date of the endorsement through the end of the policy period.</inlineHelpText>
    <label>Premium Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Pro Rata</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>