force-app/main/default/objects/Endorsement__c/fields/Pro_Rated_Premium__c.field-meta.xml
<CustomField>
    <fullName>Pro_Rated_Premium__c</fullName>
    <formula>IF(ISPICKVAL(Premium_Change_Type__c, &apos;Pro Rata&apos;),(Annualized_Premium_Change_Amount__c/365)* (Policy__r.Renewal_Date__c -  Endorsement_Effective_Date__c), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pro Rated Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>