force-app/main/default/objects/Endorsement__c/fields/QBO_Bill_Id__c.field-meta.xml
<CustomField>
    <fullName>QBO_Bill_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QBO Bill Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>