force-app/main/default/objects/Endorsement__c/fields/QBO_Has_Error__c.field-meta.xml
<CustomField>
    <fullName>QBO_Has_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QBO Has Error</label>
    <type>Checkbox</type>
</CustomField>