force-app/main/default/objects/Endorsement__c/fields/QBO_ID__c.field-meta.xml
<CustomField>
    <fullName>QBO_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QBO ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>