force-app/main/default/objects/Endorsement__c/fields/Rate_Ages_18_20__c.field-meta.xml
<CustomField>
    <fullName>Rate_Ages_18_20__c</fullName>
    <label>Rate (Ages 18 -20)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>