force-app/main/default/objects/Endorsement__c/fields/Rate_Ages_26__c.field-meta.xml
<CustomField>
    <fullName>Rate_Ages_26__c</fullName>
    <label>Rate (Ages 26+)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>