force-app/main/default/objects/Endorsement__c/fields/Reason_For_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Cancellation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason For Cancellation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>