force-app/main/default/objects/Endorsement__c/fields/REQUEST_RELEASE_DISTRIBUTION__c.field-meta.xml
<CustomField>
    <fullName>REQUEST_RELEASE_DISTRIBUTION__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>REQUEST / RELEASE DISTRIBUTION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>