force-app/main/default/objects/Endorsement__c/fields/Return_Premium_Paid_to_Client_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Premium_Paid_to_Client_Date__c</fullName>
    <description>Denotes the date FS paid the client their return premium.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Return Premium Paid to Client Date</label>
    <type>Date</type>
</CustomField>