force-app/main/default/objects/Endorsement__c/fields/Return_Premium_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Premium_Received_Date__c</fullName>
    <description>Denotes the date at which the return premium was received from the wholesaler.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Return Premium Received Date</label>
    <type>Date</type>
</CustomField>