force-app/main/default/objects/Endorsement__c/fields/Return_Premium_Recieved__c.field-meta.xml
<CustomField>
    <fullName>Return_Premium_Recieved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether or not the rated premium was received from the wholesaler.</description>
    <label>Return Premium Recieved</label>
    <type>Checkbox</type>
</CustomField>