force-app/main/default/objects/Endorsement__c/fields/Revenue_Date__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Date__c</fullName>
    <description>Date on which endorsements revenue is recognized</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Revenue Date</label>
    <type>Date</type>
</CustomField>