force-app/main/default/objects/Endorsement__c/fields/Sales_Notes__c.field-meta.xml
<CustomField>
    <fullName>Sales_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>