force-app/main/default/objects/Endorsement__c/fields/Scale_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Scale_Invoice_Number__c</fullName>
    <description>Scale invoice number for endorsements</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Scale invoice number for endorsements</inlineHelpText>
    <label>Scale Invoice Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>