force-app/main/default/objects/Endorsement__c/fields/SF_Classic_Link__c.field-meta.xml
<CustomField>
    <fullName>SF_Classic_Link__c</fullName>
    <formula>IF(LEFT($Organization.Id, 5) = &apos;00D37&apos;, 
&quot;https://foundershield.my.salesforce.com/&quot; + Id,
&quot;https://foundershield--fsdataqa.sandbox.my.salesforce.com/&quot; + Id
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SF Classic Link</label>
    <type>Text</type>
</CustomField>