force-app/main/default/objects/Endorsement__c/fields/SL_Meets_Criteria__c.field-meta.xml
<CustomField>
    <fullName>SL_Meets_Criteria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SL Meets Criteria</label>
    <type>Checkbox</type>
</CustomField>