force-app/main/default/objects/Endorsement__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Requested by Insured</fullName>
            </value>
            <value>
                <fullName>Submitted to Carrier</fullName>
                <default>true</default>
                <label>Submitted to Carrier</label>
            </value>
            <value>
                <fullName>Endorsement Quote Presented</fullName>
            </value>
            <value>
                <fullName>Bind Order Sent</fullName>
            </value>
            <value>
                <fullName>Delivered to Insured</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Cancellation Notice Sent</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Rescinded</fullName>
            </value>
            <value>
                <fullName>Included in Coverage</fullName>
            </value>
            <value>
                <fullName>Cancellation in Process</fullName>
            </value>
            <value>
                <fullName>Cancellation Processed/Tail in Place</fullName>
            </value>
            <value>
                <fullName>Commission Statement Uploaded</fullName>
            </value>
            <value>
                <fullName>Commission Payment Received</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>