force-app/main/default/objects/Endorsement__c/fields/State_Fees_Other__c.field-meta.xml
<CustomField>
    <fullName>State_Fees_Other__c</fullName>
    <label>State Fees (Other)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>