force-app/main/default/objects/Endorsement__c/fields/State_Tax_Summary__c.field-meta.xml
<CustomField>
    <fullName>State_Tax_Summary__c</fullName>
    <formula>State_Tax__c + State_Stamping_Fee__c + State_Fees_Other__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State Tax (Invoice)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>