force-app/main/default/objects/Endorsement__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What&apos;s the endorsement for?</inlineHelpText>
    <label>Subject</label>
    <length>60</length>
    <type>Text</type>
</CustomField>