force-app/main/default/objects/Endorsement__c/fields/Surplus_Lines_Policy__c.field-meta.xml
<CustomField>
    <fullName>Surplus_Lines_Policy__c</fullName>
    <formula>Policy__r.Surplus_Lines_Policy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Surplus Lines Policy</label>
    <type>Checkbox</type>
</CustomField>