force-app/main/default/objects/Endorsement__c/fields/Tail_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Tail_Effective_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tail Effective Date</label>
    <type>Date</type>
</CustomField>