force-app/main/default/objects/Endorsement__c/fields/Tail_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Tail_Expiration_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Endorsement Expiration Date</label>
    <type>Date</type>
</CustomField>