force-app/main/default/objects/Endorsement__c/fields/Taxes_Paid_to_State__c.field-meta.xml
<CustomField>
    <fullName>Taxes_Paid_to_State__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do not use</description>
    <label>Taxes Paid to State</label>
    <type>Checkbox</type>
</CustomField>