force-app/main/default/objects/Endorsement__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <description>This is the total cost for Founder Shield records. 9/23 - AB added policy fees untaxed to formula. 9/4/24 - AB added Underwriting Fees</description>
    <formula>Premium_Change_Amount__c + Wholesaler_Fees__c +  Policy_Fees_Taxed__c  + State_Fees_Other__c + State_Stamping_Fee__c + State_Tax__c + FS_Fee__c +  State_Filing_Fee__c + Wholesale_Fees__c + Underwriting_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total cost for FS records.</inlineHelpText>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>