force-app/main/default/objects/Endorsement__c/fields/Total_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice__c</fullName>
    <formula>Premium_and_Policy_Fees__c + State_Tax_Summary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total (Invoice)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>