force-app/main/default/objects/Endorsement__c/fields/Total_Premium__c.field-meta.xml
<CustomField>
    <fullName>Total_Premium__c</fullName>
    <description>RMDA</description>
    <formula>Premium_Ages_18_20__c + Premium_Ages_21_25__c + Premium_Ages_26__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Premium</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>