force-app/main/default/objects/Endorsement__c/fields/Total_Premium_Medical__c.field-meta.xml
<CustomField>
    <fullName>Total_Premium_Medical__c</fullName>
    <label>Total Premium - Medical</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>