force-app/main/default/objects/Endorsement__c/fields/TRIA_Premium__c.field-meta.xml
<CustomField>
    <fullName>TRIA_Premium__c</fullName>
    <formula>0.01*(Premium_Change_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TRIA Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>