force-app/main/default/objects/Endorsement__c/fields/Underwriting_Fees__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Fees__c</fullName>
    <label>Underwriting Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>