force-app/main/default/objects/Endorsement__c/fields/Wholesale_Fees__c.field-meta.xml
<CustomField>
    <fullName>Wholesale_Fees__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>As of 9/19/24 we are not using this field.</description>
    <inlineHelpText>Do not use this field.</inlineHelpText>
    <label>Policy Fees (Untaxed)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>