force-app/main/default/objects/Endorsement__c/fields/Wholesaler_Fees__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_Fees__c</fullName>
    <label>Wholesaler Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>