force-app/main/default/objects/Endorsement__c/recordTypes/Endorsement.recordType-meta.xml
<RecordType>
    <fullName>Endorsement</fullName>
    <active>true</active>
    <description>Tracking Endorsements</description>
    <label>Endorsement</label>
</RecordType>