force-app/main/default/objects/Endorsement__c/recordTypes/Health_Benefits.recordType-meta.xml
<RecordType>
    <fullName>Health_Benefits</fullName>
    <active>true</active>
    <description>For tracking Health and Benefits endorsements</description>
    <label>Health &amp; Benefits</label>
</RecordType>