force-app/main/default/objects/Endorsement__c/recordTypes/Scale.recordType-meta.xml
<RecordType>
    <fullName>Scale</fullName>
    <active>true</active>
    <description>Tracking Scale Endorsements</description>
    <label>Scale</label>
</RecordType>