force-app/main/default/objects/Endorsement__c/validationRules/Billing_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Required</fullName>
    <active>true</active>
    <errorConditionFormula>$Setup.Master_Validation__c.Account_Active__c &amp;&amp; 

AND(ISPICKVAL( Stage__c , &quot;Bind Order Sent&quot;), 
NOT(RecordType.Name = &apos;Health &amp; Benefits&apos;),
ISCHANGED(Stage__c),
ISPICKVAL(Billing__c, &quot;&quot;)
)</errorConditionFormula>
    <errorMessage>Field Required: Endorsement Billing</errorMessage>
</ValidationRule>