force-app/main/default/objects/Endorsement__c/validationRules/Direct_Bill_Policy_Must_Be_Direct.validationRule-meta.xml
<ValidationRule>
    <fullName>Direct_Bill_Policy_Must_Be_Direct</fullName>
    <active>false</active>
    <errorConditionFormula>$Setup.Master_Validation__c.Account_Active__c &amp;&amp;
NOT($RecordType.Name = &quot;Health &amp; Benefits&quot;) &amp;&amp;
AND( Policy_Billing__c = &quot;Direct&quot;,
NOT(TEXT(Billing__c) = &quot;Direct&quot;))</errorConditionFormula>
    <errorMessage>Endorsements on Direct Bill Policies must be Direct Billed</errorMessage>
</ValidationRule>