force-app/main/default/objects/Endorsement__c/validationRules/Expiration_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Expiration_Date_Required</fullName>
    <active>false</active>
    <description>Expiration Date required when Stage = Bind Order Sent or Delivered to Insured</description>
    <errorConditionFormula>AND(
RecordType.Name = &quot;Endorsement&quot;,
OR(
ISPICKVAL(Stage__c, &quot;Bind Order Sent&quot;),
ISPICKVAL(Stage__c, &quot;Delivered to Insured&quot;)),
DATEVALUE(CreatedDate) &gt;= DATEVALUE(&quot;2023-08-24&quot;),
ISNULL( Tail_Expiration_Date__c ) )</errorConditionFormula>
    <errorMessage>Field Required: Expiration Date</errorMessage>
</ValidationRule>