force-app/main/default/objects/Endorsement__c/validationRules/Georgia_Non_Admitted_No_FS_Fee.validationRule-meta.xml
<ValidationRule>
    <fullName>Georgia_Non_Admitted_No_FS_Fee</fullName>
    <active>true</active>
    <description>If the Shipping/Location State = Georgia, Admitted = No then FS Fee has to be 0.</description>
    <errorConditionFormula>AND(
Account_Location_State__c  = &quot;Georgia&quot;,
ISPICKVAL(Admitted__c, &quot;No&quot;),
FS_Fee__c   &lt;&gt;  0)</errorConditionFormula>
    <errorMessage>If the Shipping/Location State = Georgia, Admitted = No then FS Fee has to be 0.</errorMessage>
</ValidationRule>